--- a/public/app/diagram/diagram.html
+++ b/public/app/diagram/diagram.html
@@ -17,7 +17,7 @@
 
     <div id="menu">
         <div class="header">
-            Design Surface Example w/ MEAN Stack & Kendo UI in full TypeScript
+            DIAGRAM Refactored to TypeScript & AngularJS
             <a id="about" ng-click="vm.aboutClick($event)">About</a>
         </div>
         <ul kendo-menu="menu" k-options="vm.menuOptions"></ul>
@@ -218,8 +218,6 @@
     </div>
 
     <div id="window" kendo-window k-options="vm.windowWidgetOptions">
-        <h2>Design Surface Application by Telerik</h2>
-        <h3>Angularized, Typed and ported to MEAN stack by <a href="http://developer.telerik.com/community/developer-experts/">Telerik Developer Expert</a> <a href="http://blog.longle.net" target="_blank">Long Le</a>  @ Neudesic</h3>
 
         <p>The Diagramming Tool app was built with Telerik HTML5 Kendo UI widgets. Telerik Kendo UI framework consists of
             <a
